packages/language/test/fixtures/projects/diagnostics/parse-errors/generic-gibberish.siren
# EL001 — Completely invalid syntax, no recognizable Siren structure
this is not valid siren syntax!!!
